--- a/public/student-progress.html
+++ b/public/student-progress.html
@@ -439,14 +439,13 @@
 
             <ul class="navbar-menu">
                 <li><a href="/" class="navbar-link">Projects</a></li>
+                <li><a href="/my-projects.html" class="navbar-link">My Projects</a></li>
                 <li><a href="/student-progress.html" class="navbar-link active">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
-                <li><a href="/instructor-dashboard.html" class="navbar-link">Teacher Panel</a></li>
-                <li><a href="/instructor-dashboard.html?tab=analytics" class="navbar-link">Analytics</a></li>
-                <li><a href="/all-kids.html" class="navbar-link">All Kids</a></li>
-                <li><a href="/teacher.html" class="navbar-link">Teacher Panel</a></li>
-                <li><a href="/all-kids.html" class="navbar-link">All Kids</a></li>
+                <!-- Teacher Panel Link Removed -->
+                <li><a href="/instructor-dashboard.html?tab=analytics" class="navbar-link" id="navAnalytics"
+                        style="display: none;">Analytics</a></li>
             </ul>
             <a href="/" class="navbar-btn">Back to Home</a>
         </div>
